# Raiu

./: .gitignore  CMakeLists.txt  README.md
include/raiu/: assert.h  list.h  log.h  map.h  opcodes.h  raiu.h  set.h  string.h  types.h
rcc/: CMakeLists.txt
rvm/: CMakeLists.txt  TODO.md  dummy_proj.c
rvm/src/: main.c  metadata.h  rvm.c  rvm.h  vm.c  vm.h
rvm/src/interpreter/: interpreter.c
rvm/src/linker/: link_data.h  linker.c  linker.h  validator.c
